<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <VideoView
            android:id="@+id/video_vista"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible"
            tools:visibility="visible" />


        <LinearLayout
            android:id="@+id/layout_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/boton_reproducir_audio"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/reproducir"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/boton_pausar_audio"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/pausar"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <WebView
            android:id="@+id/vista_web"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <Button
            android:id="@+id/boton_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/volver" />

    </LinearLayout>
</ScrollView>
